# mpc-rbt-student

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  config.json  debug_session.yml  example_receiver.service  example_sender.service  package.xml  prepare_service_file_links.sh  run_receiver.sh  run_sender.sh  service_session.yml
.github/workflows/: test.yml
assignments/lab_02/: instructions.md
assignments/lab_03/: instructions.md
assignments/lab_03/lab03_ws/src/lab_test_pkg/: CMakeLists.txt  package.xml
assignments/lab_03/lab03_ws/src/lab_test_pkg/src/: TestNode.cpp
assignments/lab_03/lab03_ws/src/muj_pkg/: CMakeLists.txt  package.xml
assignments/lab_03/lab03_ws/src/muj_pkg/src/: publisher_member_function.cpp
assignments/lab_04/: instructions.md
assignments/lab_05/: instruction.md
assignments/lab_06/: instruction.md
assignments/lab_07/: instruction.md
include/: KeyboardControl.hpp  Localization.hpp  MotionControl.hpp  Planning.hpp
include/mpc-rbt-solution/: Receiver.hpp  Sender.hpp
include/mpc-rbt-solution/util/: Socket.hpp  Utils.hpp
launch/: solution.launch.py
rviz/: config.rviz
src/: KeyboardControl.cpp  Localization.cpp  MotionControl.cpp  Planning.cpp  Receiver.cpp  Sender.cpp  keyboard_control_node.cpp  localization_node.cpp  motion_control_node.cpp  planning_node.cpp  receiver_node.cpp  sender_node.cpp
src/util/: Socket.cpp  Utils.cpp
tests/: CMakeLists.txt  solutionTest.cpp
